--- a/languages/cpp/README.dox
+++ b/languages/cpp/README.dox
@@ -2,9 +2,9 @@
 Provides C/C++ language support for KDevelop.
 
 Well the first thing you should read is lib/catalog it contains the source of the persistant class store
-after that parts/cppsupport/tag_creator.*
+after that languages/cpp/tag_creator.*
 it is the component that stores the informations collected by the c++ parser into the PCS
-then you can play with KDevPCSImporter the code of the dialog is in parts/cppsupport/createpcsdialog* and plugins/pcsimporter/*
+then you can play with KDevPCSImporter the code of the dialog is in languages/cpp/createpcsdialog* and languages/cpp/pcsimporter/*
 and of course lib/interfaces/kdevpcsimporter.*
 and if you want play with the c++ parser go to lib/cppparser/, the best is to start to read driver.*
 
@@ -20,7 +20,7 @@ Consult \ref LangSupportStatus for an up to date status of this programming lang
 \feature code highligth
 
 
-\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=cppsupport&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">Bugzilla database</a>
+\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=cppsupport&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">cppsupport component at Bugzilla database</a>
 \bug Bug number 2
 
 \note
