--- a/languages/php/README.dox
+++ b/languages/php/README.dox
@@ -20,8 +20,7 @@ Consult \ref LangSupportStatus for an up to date status of this programming lang
 ...
 \feature Describe the last feature
 
-\bug bugs from <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=php+support&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">
-php support in Bugzilla database</a>
+\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=php+support&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">php support at Bugzilla database</a>
 \bug Describe a the 1st bug that you know of, but probably hasn't been reported yet.
 ..
 \bug Describe a the nth bug that you know of, but probably hasn't been reported yet.
