--- a/parts/astyle/README.dox
+++ b/parts/astyle/README.dox
@@ -5,6 +5,6 @@ A plugin for formatting of sourcecode according to a specified set of rules.
 
 \feature formats source code according to a specified set of rules
 
-\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=astyle&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">Bugzilla database</a>
+\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=astyle&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">astyle component at Bugzilla database</a>
 
 */
