--- a/parts/buglist/README.dox
+++ b/parts/buglist/README.dox
@@ -5,7 +5,7 @@ over several lines. You can even use some html commands in these lines like:
 <code>This is code</code>, html links <a href="http://somelocation">link text</a>,
 and images.
 
-\authors <a href="mailto:blackhawk@ivanhawkes.com">Ivan Hawkes</a>
+\authors <a href="mailto:blackhawk AT ivanhawkes.com">Ivan Hawkes</a>
 
 \unmaintained This part is un-maintained and therefore it's compilation is disabled
 
