--- a/parts/closer/README.dox
+++ b/parts/closer/README.dox
@@ -4,7 +4,7 @@ Part for closing selected windows
 This is a very simple plugin, the only purpose of which is to display
 a dialog showing the currenly open files and offering to close them.
 
-\authors Jens Dagerbo <jens.dagerbo@swipnet.se> aka teatime
+\authors <a href="mailto:jens.dagerbo AT swipnet.se">Jens Dagerbo</a> aka teatime
 
 \todo Decide if it is supposed to be a part of KDevelop at all, and if so,
 if it is sane to offer it as a plugin or just put it in the main code.
