--- a/parts/fullscreen/README.dox
+++ b/parts/fullscreen/README.dox
@@ -1,9 +1,9 @@
 /** \class FullScreenPart
 Displays KDevelop in full screen
 
-\authors <a href="mailto:roberto@kdevelop.org">Roberto Raggi</a>
+\authors <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
 
-\maintainer <a href="mailto:roberto@kdevelop.org">Roberto Raggi</a>
+\maintainer <a href="mailto:roberto AT kdevelop.org">Roberto Raggi</a>
 
 \feature Displays KDevelop in full screen
 
