--- a/parts/manager/README.dox
+++ b/parts/manager/README.dox
@@ -1,4 +1,4 @@
-/** \class FileViewPart
+/** \class DocManager
 Put a brief description here, the brief description ends at the first dot.
 Put a more detailed description of your part in these lines. It can span
 over several lines. You can even use some html commands in these lines like:
@@ -10,10 +10,7 @@ and images.
 ...
 \authors <a href="mailto:nth author AT provider.com">nth author full name</a>
 
-\maintainer <a href="mailto:$EMAIL$">$AUTHOR$</a>
-\maintainer <a href="mailto:2nd maintainer AT provider.com">2nd maintainer full name</a>
-...
-\maintainer <a href="mailto:nth maintainer AT provider.com">nth maintainer full name</a>
+\unmaintained This part is currently un-maintained
 
 \feature Describe the first feature
 \feature Describe the second feature
