--- a/languages/cpp/README.dox
+++ b/languages/cpp/README.dox
@@ -29,6 +29,14 @@ Add notes here
 Put verbatin code here if you need
 \endverbatim
 
+\faq <b>How can I have documentation on functions when using codecompletion</b>
+  -# Create the xml-output with <a href="http://www.doxygen.org">Doxygen</a> of the files you want to add to the classstore
+  -# Create the new PCS-database with r++. Now you have to use the -d command line switch of r++ to have it include the documentation.
+     It is used like -d/path/of/doxygen/xml/output (notice that there is _no_ whitespace between -d and the path!).
+     You can use it multiple times to have r++ search for the informations in different directories.
+     r++ -d has to be used (like every other commandline switch) before you write the directories you want r++ to create the PCSdatabase from.
+  -# Activate your newly created Database in the Project->Project Options...->C++ Specific->Code Completion...
+  .
 \faq <b>How does this work ?</b> I have no clue. Ask roberto! :)
 \faq <b>How does r++ work ?</b> I have no clue. Ask roberto! :)
 
