--- a/parts/filecreate/README.dox
+++ b/parts/filecreate/README.dox
@@ -3,11 +3,11 @@ FileCreatePart is a template manager and wizard system to assist with creation o
 
 Assists with creation of new files.
 
-<p>For those who want to look beyond the GUI, the following illustrates the XML to configure the FileCreate part for a project. It simply consists of a list of filetypes that the user may wish to create for a particular project. At present, the "create" attribute is ignored.</p>
+For those who want to look beyond the GUI, the following illustrates the XML to configure the FileCreate part for a project. It simply consists of a list of filetypes that the user may wish to create for a particular project. At present, the "create" attribute is ignored.
 
-<p>The file create part looks for a file template called @ext (i.e. the value of the ext attribute) in the *project's* templates directory (see the PyQT appwizard template for an example).</p>
+The file create part looks for a file template called \@ext (i.e. the value of the ext attribute) in the *project's* templates directory (see the PyQT appwizard template for an example).
 
-<p>For subtypes, it looks for a template called @ext-@ref, so in the example below the following files would need to be present in the project's templates directory:</p>
+For subtypes, it looks for a template called \@ext-\@ref, so in the example below the following files would need to be present in the project's templates directory:
 
 <code>
 py
@@ -16,44 +16,50 @@ ui-dialog
 ui-mainwin
 </code>
 
-<p>Example XML:</p>
+Example XML:
 
 <code>
-  &lt;kdevfilecreate>
-    &lt;filetypes>
-      &lt;type ext="py" name="Python" create="template"/>
-      &lt;type ext="ui" name="QT Designer" create="template">
-        &lt;subtype ref="dialog" name="Dialog"/>
-	&lt;subtype ref="mainwin" name="Main window"/>
-      &lt;/type>
-    &lt;/filetypes>
-  &lt;/kdevfilecreate>
+\verbatim
+  <kdevfilecreate>
+    <filetypes>
+      <type ext="py" name="Python" create="template"/>
+      <type ext="ui" name="QT Designer" create="template">
+        <subtype ref="dialog" name="Dialog"/>
+         <subtype ref="mainwin" name="Main window"/>
+      </type>
+    </filetypes>
+  </kdevfilecreate>
+\endverbatim
 </code>
 
-<p>You can also use global template definitions supplied with the FileCreate part:</p>
+You can also use global template definitions supplied with the FileCreate part:
 
 <code>
-  &lt;kdevfilecreate>
-    &lt;useglobaltypes>
-      &lt;type ext="ui" />
-    &lt;/useglobaltypes>
-    &lt;filetypes>
-      &lt;type ext="py" name="Python" create="template"/>
-    &lt;/filetypes>
-  &lt;/kdevfilecreate>
+\verbatim
+  <kdevfilecreate>
+    <useglobaltypes>
+      <type ext="ui" />
+    </useglobaltypes>
+    <filetypes>
+      <type ext="py" name="Python" create="template"/>
+    </filetypes>
+  </kdevfilecreate>
+\endverbatim
 </code>
 
-<p>If a type has subtypes, and no subtypes are specified, then all subtypes are assumed to be required (as in the example above). Otherwise, specific subtypes should be specified:</p>
+If a type has subtypes, and no subtypes are specified, then all subtypes are assumed to be required (as in the example above). Otherwise, specific subtypes should be specified:
 
 <code>
-&lt;useglobaltypes>
-  &lt;type ext="ui">
-    &lt;subtype ref="dialog"/>
-  &lt;/type>
-&lt;/useglobaltypes>
+\verbatim
+<useglobaltypes>
+  <type ext="ui">
+    <subtype ref="dialog"/>
+  </type>
+</useglobaltypes>
+\endverbatim
 </code>
 
-<p>Usually, this XML forms part of the base .kdevelop file created by the appwizard.</p>
+Usually, this XML forms part of the base .kdevelop file created by the appwizard.
 
 \authors <a href="mailto:kde AT jrockey.com">Julian Rockey</a>
 \authors <a href="mailto:cloudtemple AT mksat.net">Alexander Dymo</a>
