--- a/vcs/clearcase/README
+++ b/vcs/clearcase/README
@@ -1,1 +1,3 @@
-Please read the README.dox file.
+Please read the on-line, automaticaly updated KDevelop API documentation at:
+http://www.kdevelop.org
+or read the README.dox file.
