--- a/vcs/perforce/README
+++ b/vcs/perforce/README
@@ -1,4 +1,3 @@
-Integrates the version managment system
-perforce into KDevelop.
-
-Maintainer: Harald Fernengel <harry@kdevelop.org>
+Please read the on-line, automaticaly updated KDevelop API documentation at:
+http://www.kdevelop.org
+or read the README.dox file.
