--- a/parts/distpart/README
+++ b/parts/distpart/README
@@ -1,22 +1,3 @@
-Distpart.
-=========
-
-- User interface and global architecture designed initially by Ian Reinart Geiser <geiseri@yahoo.com>
-- additional code by Yann Hodique <Yann.Hodique@lifl.fr>
-
-This part aims to provide some help to the developpers for packaging
-and publishing their projects by ftp protocol.
-
-Only RPM package format is supported for now. More to come.
-If you want to develop a new package support, please have a look at
-specsupport.h and specsupport.cpp. Help is always welcome :-)
-
-Development package, documentation package, application icon and local
-options (in publishing tab) are currently ignored.
-
-Another problem is that the creation of the source archive is just a
-call to "dist" or "dist-bzip2" target of the Makefile. If those
-targets don't exist, nothing is done to solve the problem (for
-example when the project is QMake-based)
-
-Yann Hodique.
+Please read the on-line, automaticaly updated KDevelop API documentation at:
+http://www.kdevelop.org
+or read the README.dox file.
