--- a/parts/tools/README.dox
+++ b/parts/tools/README.dox
@@ -1,52 +1,12 @@
-/** \class $APPNAME$
-Put a brief description here, the brief description ends at the first dot.
-Put a more detailed description of your part in these lines. It can span
-over several lines. You can even use some html commands in these lines like:
-<code>This is code</code>, html links <a href="http://somelocation">link text</a>,
-and images.
+/** \class ToolsPart
+This plugin provides an easy way to add external applications to the Tools menu and toolbar.
 
 \authors <a href="mailto:bernd AT kdevelop.org">Bernd Gehrmann</a>
 
-\maintainer <a href="mailto:$EMAIL$">$AUTHOR$</a>
-\maintainer <a href="mailto:2nd maintainer AT provider.com">2nd maintainer full name</a>
-...
-\maintainer <a href="mailto:nth maintainer AT provider.com">nth maintainer full name</a>
+\unmaintained This part is currently un-maintained.
 
-\feature Describe the first feature
-\feature Describe the second feature
-...
-\feature Describe the last feature
-
-\bug bugs in <a href="http://bugs.kde.org/buglist.cgi?product=kdevelop&component=YOUR_COMPONENT_NAME&
-bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&order=Bug+Number">
-YOUR_COMPONENT_NAME at Bugzilla database</a>
-\bug Describe a the 1st bug that you know of, but probably hasn't been reported yet.
-..
-\bug Describe a the nth bug that you know of, but probably hasn't been reported yet.
-
-\requirement Describe a the 1st requirement of your part.
-\requirement Describe a the 2nd requirement of your part.
-...
-\requirement Describe a the nth requirement of your part.
-
-\todo Describe a the 1st TODO of your part.
-\todo Describe a the 2nd TODO of your part.
-...
-\todo Describe a the nth TODO of your part.
-
-\faq <b>First frequenly asked question about your part ?</b> Answer.
-\faq <b>Second frequenly asked question about your part ?</b> Answer.
-...
-\faq <b>Last frequenly asked question about your part ?</b> Answer.
-
-\note First note text.
-\note Second note text.
-...
-\note Last note text.
-
-\warning First warning text.
-\warning Second warning text.
-...
-\warning Last warning text.
+\feature Provides an easy way to add external applications to the Tools menu and toolbar.
+\feature Tool menu and the file and directory context menus can now be populated with any shell command.
+\feature Output can be sent to the app output part. %S, %D, %T and %W magic works.
 
 */
