--- a/doc/api/HowToAddApplicationTemplates.dox
+++ b/doc/api/HowToAddApplicationTemplates.dox
@@ -41,8 +41,7 @@ Create a directory <code>template-khello</code> with the files
     - template-khello/src-Makefile.am
     - template-khello/subdirs
     .
-</pre></code>
-<b>note:</b><br> The directory name must begin with <code>"template-"</code>.
+</pre></code><b>note:</b><br> The directory name must begin with <code>"template-"</code>.
 
 \subsection templates_1_2 I.2. Step 2: The Files in Detail
 
@@ -104,7 +103,7 @@ The following script is used to install the template and replaces all
 variables by the corresponding value. The result is a hopefully working
 kdevelop project!
 \verbinclude khello/script
-<b>note:</b><br> There are several application templates which use some identical
+<br><b>note:</b><br> There are several application templates which use some identical
 files - that's why some files are taken from the <code>"template-common"</code>-directory.
 
 \section templates_2 II. Registration/Installation Of The Application Template
@@ -160,7 +159,7 @@ script.local
     - <code>"Makefile.am"</code> looks like this:
     \verbinclude khello/Makefile.am
     .
-Finally add <code>"template-khello"</code> to "SUBDIRS = " in <code>kdevelop/languages/cpp/app_templates/Makefile.am</code>.
+Finally add <code>"template-khello"</code> to "SUBDIRS = " in <code>kdevelop/languages/cpp/app_templates/Makefile.am</code>.<br><br>
 <b>attention:</b><br> Please test your template whether it installs and behaves correctly!
 Test, test and test again! It works? Well - now talk to the kdevelop guys so
 that they know what's going on and probably you may commit. ;)
