--- a/doc/api/LangSupportStatus.dox
+++ b/doc/api/LangSupportStatus.dox
@@ -308,5 +308,86 @@ Legend:
       <td>Language parser is included in language support part</td>
     </tr>
 </table>
+<br>
+How to improve it:
+<br>
+<table border="1">
+    <tr>
+      <th scope=col>Feature/Language</th>
+      <th scope=col bgcolor="yellow">\ref howToAddProgrammingLanguages (doc/api/HowToAddProgrammingLanguages.dox file)</th>
+    </tr>
+    <tr>
+      <td>Class wizard</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Attribute/Method wizard</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Qt UI subclassing</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>  </td>
+    </tr>
+    <tr>
+      <td>Language parser</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Memory Class store</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Persistant class store</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Problem reporter</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Code completion</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>  </td>
+    </tr>
+    <tr>
+      <td>Application wizard templates</td>
+      <td bgcolor="green">\ref howToAddApplicationTemplates (doc/api/HowToAddApplicationTemplates.dox file)</td>
+    </tr>
+    <tr>
+      <td>Application wizard import templates</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Filecreate templates</td>
+      <td bgcolor="yellow">\ref howToAddFileTemplates (doc/api/HowToAddFileTemplates.dox file)</td>
+    </tr>
+    <tr>
+      <td>Abbrevation templates</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>Source formatter</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>  </td>
+    </tr>
+    <tr>
+      <td>Documentation topics</td>
+      <td bgcolor="red">N</td>
+    </tr>
+    <tr>
+      <td>  </td>
+    </tr>
+    <tr>
+      <td>Debugger</td>
+      <td bgcolor="red">N</td>
+    </tr>
+</table>
 */
 
