--- a/doc/api/LangSupportStatus.dox
+++ b/doc/api/LangSupportStatus.dox
@@ -257,6 +257,21 @@
       <td bgcolor="green">N/A</td>
       <td bgcolor="red">N</td>
     </tr>
+    <tr>
+      <td>Compiler plugins</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="green">N/A</td>
+      <td bgcolor="green">gcc</td>
+      <td bgcolor="green">PGHPF, PGF77</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="green">Delphi, Free Pascal</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="red">N</td>
+      <td bgcolor="green">Glasgow</td>
+      <td bgcolor="red">N</td>
+    </tr>
 </table>
 <br>
 Legend:
@@ -337,15 +352,15 @@ How to improve it:
     </tr>
     <tr>
       <td>Memory Class store</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref ClStore</td>
     </tr>
     <tr>
       <td>Persistant class store</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref ClStore</td>
     </tr>
     <tr>
       <td>Problem reporter</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref PrReport</td>
     </tr>
     <tr>
       <td>Code completion</td>
@@ -356,7 +371,7 @@ How to improve it:
     </tr>
     <tr>
       <td>Application wizard templates</td>
-      <td bgcolor="green">\ref howToAddApplicationTemplates (doc/api/HowToAddApplicationTemplates.dox file)</td>
+      <td bgcolor="green">\ref applicationTemplates</td>
     </tr>
     <tr>
       <td>Application wizard import templates</td>
@@ -364,29 +379,33 @@ How to improve it:
     </tr>
     <tr>
       <td>Filecreate templates</td>
-      <td bgcolor="yellow">\ref howToAddFileTemplates (doc/api/HowToAddFileTemplates.dox file)</td>
+      <td bgcolor="yellow">\ref sourceFileTemplates</td>
     </tr>
     <tr>
       <td>Abbrevation templates</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref CdAbbr</td>
     </tr>
     <tr>
       <td>Source formatter</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref sourceFormater</td>
     </tr>
     <tr>
       <td>  </td>
     </tr>
     <tr>
       <td>Documentation topics</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref documentationTopics</td>
     </tr>
     <tr>
       <td>  </td>
     </tr>
     <tr>
       <td>Debugger</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="cyan">\ref debuggerSupport</td>
+    </tr>
+    <tr>
+      <td>Compiler plugins</td>
+      <td bgcolor="cyan">\ref compilerPlugins</td>
     </tr>
 </table>
 */
